images in notebook scaled

--- a/nb/mut_extraction_birds.ipynb
+++ b/nb/mut_extraction_birds.ipynb
@@ -1724,9 +1724,9 @@
     "- genes are on light strand\n",
     "- usually we look at heavy strand mutspec\n",
     "\n",
-    "<img src=\"https://els-jbs-prod-cdn.jbs.elsevierhealth.com/cms/attachment/73933a0c-f41b-44c4-8dae-04d383bfba91/gr1.jpg\">\n",
+    "<img src=\"https://media.springernature.com/full/springer-static/image/art%3A10.1186%2Fs12915-019-0668-y/MediaObjects/12915_2019_668_Fig2_HTML.png\" width=800px>\n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Map_of_the_human_mitochondrial_genome.svg/800px-Map_of_the_human_mitochondrial_genome.svg.png\">"
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Map_of_the_human_mitochondrial_genome.svg/800px-Map_of_the_human_mitochondrial_genome.svg.png\" width=800px>"
    ]
   },
   {
