--- a/nb/mut_extraction_birds.ipynb
+++ b/nb/mut_extraction_birds.ipynb
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2209,6 +2209,65 @@
    "source": [
     "edge_mutspec_ff[edge_mutspec_ff.Mut == \"A>G\"][\"MutSpec\"].hist()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reformat mutspec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_TO_DIR_OF_EDGE_MUTSPEC = \"../data/processed/for_signatures/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped = edge_mutspec192_ff.groupby(\"AltNode\")\n",
+    "for gname in edge_mutspec192_ff.AltNode.unique():\n",
+    "    cur_gr = grouped.get_group(gname)\n",
+    "    assert len(cur_gr) == 192\n",
+    "    cur_gr[\"NucSubst\"] = cur_gr.Mut.str.get(0) + cur_gr.Mut.str.get(2) + cur_gr.Mut.str.get(-1) + \">\" + \\\n",
+    "                        cur_gr.Mut.str.get(0) + cur_gr.Mut.str.get(-3) + cur_gr.Mut.str.get(-1)\n",
+    "    \n",
+    "    cur_gr = cur_gr[[\"NucSubst\", \"RawMutSpec\"]]\n",
+    "    cur_gr.to_csv(os.path.join(PATH_TO_DIR_OF_EDGE_MUTSPEC, gname + \".csv\"), index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
